# fastapi-sqlalchemy-crud

./: .gitignore  README.md  pyproject.toml
app/: database.py  main.py  models.py  schemas.py
tests/: test_main.py
