[project]
name = "fastapi-sqlalchemy-crud"
version = "1.0.0"
description = "A modern FastAPI application with SQLAlchemy CRUD operations"
authors = [
    {name = "Aine LLC."}
]
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "sqlalchemy>=2.0.41",
    "python-multipart>=0.0.20",
]
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://github.com/ganessaa/fastapi-sqlalchemy-crud"
"Repository" = "https://github.com/ganessaa/fastapi-sqlalchemy-crud"
"Bug Reports" = "https://github.com/ganessaa/fastapi-sqlalchemy-crud/issues"
"Documentation" = "https://github.com/ganessaa/fastapi-sqlalchemy-crud#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.1",
    "httpx>=0.28.1",
]
